--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>I am a software developer in the making...</p>
+      <p>I am a software developer in the making...but i really want to be a DevOps Engineer</p>
       <h1>Where I'm From</h1>
       <p>Lagos, Nigeria</p>
       <h1>What are your favorite hobbies?</h1>
